src/test/ui/error-codes/E0624.stderr
error[E0624]: method `method` is private
  --> $DIR/E0624.rs:21:9
   |
LL |     foo.method(); //~ ERROR method `method` is private [E0624]
   |         ^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0624"
